--- a/.travis.yml
+++ b/.travis.yml
@@ -11,5 +11,6 @@ install:
   - pip install -r requirements_dev.txt
 script:
   - pycodestyle src/*py --ignore=E501
-  - pytest
-  - pytest-cov
+  - pytest -cov=handler
+after_success:
+  - coveralls
