--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,6 @@ install:
   - pip install -r requirements_dev.txt
 script:
   - pycodestyle src/*py --ignore=E501
-  - pytest -cov=handler
+  - pytest --cov=handler
 after_success:
   - coveralls
